# codetester

./: .dockerignore  .env.example  Dockerfile  LICENSE  README.md  bot.go  docker-compose.yaml  pyproject.toml
.github/workflows/: ci.yml  docker.yaml  publish-dockerhub.yml
examples/: basic_usage.py
github_deployment_orchestrator/: README.md  docker-compose.yml
github_deployment_orchestrator/.github/workflows/: ci.yml
github_deployment_orchestrator/backend/: .env.example  requirements.txt
github_deployment_orchestrator/backend/app/: config.py  main.py  security.py
github_deployment_orchestrator/backend/app/agent/: graph.py  state.py
github_deployment_orchestrator/backend/app/models/: schemas.py
github_deployment_orchestrator/backend/app/services/: a2a_client.py  project_tracker.py
github_deployment_orchestrator/backend/app/tools/: github_tools.py
github_deployment_orchestrator/frontend/: package.json
github_deployment_orchestrator/frontend/app/: page.tsx
prod-orchestrator/: .pr-trigger
scripts/: record-demo.sh
src/codetester/: __init__.py  agent.py
